Fix NotFound page content alignment

--- a/src/containers/notfound/notfound.css
+++ b/src/containers/notfound/notfound.css
@@ -1,6 +1,6 @@
-.notFoundPage {
-    display: 'flex';
-    justify-content: 'center';
-    align-items: 'center'; 
-    height: '100vh';
+.NotFoundPage {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 96vh;
 }
